@@ -2,9 +2,18 @@ use 5.018001;
 use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
+
+# Non numeric characters are not accepted by XS.
+# FIXME instead pass -noversioncheck to xsubpp?
+# REMARK MM->parse_version is part of an internal API, so could change in
+# the future.
+my $version = MM->parse_version('XSParagraph.pm');
+$version =~ s/[[:alpha:]]+//i;
+
 WriteMakefile(
     NAME              => 'Texinfo::Convert::XSParagraph::XSParagraph',
-    VERSION_FROM      => 'XSParagraph.pm', # finds $VERSION
+#    VERSION_FROM      => 'XSParagraph.pm', # finds $VERSION
+    VERSION           => $version, 
     PREREQ_PM         => {}, # e.g., Module::Name => 1.1
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (AUTHOR         => 'Gavin Smith  <gavinsmith0123@gmail.com>') : ()),
